--- a/clickygame/package.json
+++ b/clickygame/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "homepage": "https://amerik22.github.io/ClickyGame/",
   "dependencies": {
+    "express": "^4.16.4",
+    "express-favicon": "^2.0.1",
     "gh-pages": "^2.0.1",
+    "path": "^0.12.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-scripts": "2.1.8"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server.js",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
